Fix button styles on mobile

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -80,7 +80,7 @@
   --body-font-size-l: 22px;
   --body-font-size-m: 18px;
   --body-font-size-s: 16px;
-  --body-font-size-xs: 15px;
+  --body-font-size-xs: 14px;
 
   /* nav height */
   --nav-height: 64px;
@@ -162,7 +162,7 @@ a.button:any-link,
 button {
   font-family: var(--ff-proxima-regular);
   font-weight: 400;
-  font-size: 18px;
+  font-size: var(--body-font-size-m);
   color: var(--link-color);
   line-height: 18px;
   display: inline-block;
@@ -302,6 +302,13 @@ main .section>div {
     --heading-font-size-xxl: 54px;
     --heading-font-size-xl: 54px;
     --body-font-size-m: 14px;
+  }
+
+  a.button:any-link, button {
+    font-size: var(--body-font-size-xs);
+    padding-left: 12px;
+    padding-right: 12px;
+    padding-bottom: 8px;
   }
 }
 
